--- a/index.css
+++ b/index.css
@@ -4,22 +4,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/*
-
-Style our app according to the provided design!
-
-green color -> #5f9341
-
-*/
 
 
 input {
     width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
     box-sizing: border-box;
-    border-color: #5f9341;
-    border-width: 1px;
+    border: 1px solid #5f9341
 }
 
 button {
@@ -27,6 +18,6 @@ button {
     color : white;
     font-weight: bold;
     border: none;
-    padding: 10px;
+    padding: 10px 20px;
     margin-top: 5px;
 }
